--- a/css/main.css
+++ b/css/main.css
@@ -90,27 +90,30 @@ h1 {
 
 .score-block {
   position: absolute;
-  top: 2%;
-  right: 2%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(255, 255, 255, 0.5);
 }
 
 .score {
-  display: inline-block;
   font-size: 150%;
-  background: white;
-  padding: 0.5rem 1rem;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
   transition: background 0.2s ease-in-out, transform 0.2s ease-in-out;
-  opacity: 0.5;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
 }
 
 .score.add {
-  background: #ff7b00;
-  color: #fff;
-  transform: scale(1.3);
-  opacity: 1;
-  box-shadow: 0 12px 12px #ffd527;
+  display: block;
+  color: #ea4872;
+  transform: scale(10);
+  opacity: 0.8;
+  z-index: 3;
+  font-weight: 500;
+  pointer-events: none;
 }
 
 .game {
