--- a/css/main.css
+++ b/css/main.css
@@ -68,12 +68,12 @@ h1 {
   color: #fff;
   padding: 0.5rem 0.8rem;
   background: #ea4872;
-  border-radius: 8px;
+  border-radius: 3px;
   border: 0;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   cursor: pointer;
   transition: box-shadow 0.3s ease-in-out, opacity 0.3s ease-in-out;
-  opacity: 1;
+  opacity: 0.9;
 }
 
 .button button:hover {
@@ -101,8 +101,8 @@ h1 {
   transition: background 0.2s ease-in-out, transform 0.2s ease-in-out;
   opacity: 0;
   position: absolute;
-  top: 50%;
   left: 50%;
+  bottom: 20%;
 }
 
 .score.add {
